[package]
name = "getting-started"
version = "0.1.0"
edition = "2021"

[features]
# unstable = ["zenoh/unstable"]
# transport_tcpip = ["zenoh/transport_tcpip"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "put"
path = "src/put.rs"

[[bin]]
name = "put_sync"
path = "src/put_sync.rs"

[[bin]]
name = "put_json"
path = "src/put_json.rs"

[[bin]]
name = "pub_video"
path = "src/pub_video.rs"

[[bin]]
name = "sub"
path = "src/sub.rs"

[[bin]]
name = "sub_stream_op"
path = "src/sub_stream_op.rs"
[[bin]]
name = "queryable"
path = "src/queryable.rs"


[[bin]]
name = "get"
path = "src/get.rs"

[dependencies]
zenoh = "0.10.1-rc"
async-std = { version = "=1.12.0", features = ["attributes", "unstable"] }
futures = "0.3.30"
serde_json = "1.0.114"
opencv = "0.88.8"




