[package]
name = "hello-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "t_pub"
path = "./src/tpub.rs"

[[bin]]
name = "t_sub"
path = "./src/tsub.rs"

[dependencies]
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", features = ["unstable"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "time", "io-std"] }
rand = "0.8.5"