[package]
name = "minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "m_pub"
path = "./src/pub.rs"

[[bin]]
name = "m_sub"
path = "./src/sub.rs"


[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
env_logger = "0.11.3"
flume = "0.11"
futures = "0.3.25"
zenoh = { version = "0.10.1-rc", default-features = false, features = ["transport_tcp"] }